# rl

./: README.md  environment.yml  setup.cfg  vidlist.txt
notebooks/: 2020-07-29 DifferentiableCartPoleEnv.ipynb  2020-07-29 Getting started.ipynb
rl/utils/: jupyter.py
scripts/: install.sh
tmp/gym/: list.txt
