[metadata]
name = rl
version = 0.0.1
author = Daniel Suo
author-email = danielsuo@gmail.com
home-page = https://github.com/danielsuo/rl
description = RL playground
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = rl
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.8
install_requires =
  gym
  numpy
  ipython
  matplotlib
  pyvirtualdisplay
packages = find:
